<resources>
    <string name="app_name">DropPin</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="btn_persistent">Persistent Bottom Sheet</string>
    <string name="btn_modal">Modal Bottom Sheet</string>
    <string name="tv_title">Learn Bottom Sheet</string>
    <string name="tv_description">
            A BottomSheet is a component that is used to display some information by sliding
            the view up in the screen and also you can hide this BottomSheet when the message
            is conveyed to the users. This is a nice way of conveying some message or performing
            some task in Android. Types of BottomSheet \n\nA BottomSheet is of two types: \n\nPersistent BottomSheet \n\nModal BottomSheet</string>
    <string name="btn_one">Button 1</string>
    <string name="btn_two">Button 2</string>
    <string name="btn_three">Button 3</string>
    <string name="save">Save</string>
    <string name="edit_address_icon">edit_address_icon</string>
    <string name="add_location_icon">add_location_icon</string>
    <string name="notes">Notes</string>
    <string name="add_location_notes_icon">add_location_notes_icon</string>
    <string name="ciroc_photoshoot_brooklyn">Ciroc Photoshoot - Brooklyn</string>
</resources>

