<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/bottomSheet"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/round_dialog"
    app:behavior_hideable="false"
    app:behavior_peekHeight="@dimen/dimen_32"

    app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvTitle"
        android:layout_width="288dp"
        android:layout_height="49dp"
        android:layout_marginStart="1dp"
        android:layout_marginBottom="32dp"
        android:ellipsize="none"
        android:maxLines="100"
        android:scrollHorizontally="false"
        android:text="@string/tv_title"
        android:textColor="@color/colorPrimary"
        android:textSize="17sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/divider"
        app:layout_constraintEnd_toStartOf="@+id/imageView4"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="24dp"
        android:layout_marginBottom="28dp"
        android:cropToPadding="false"
        app:layout_constraintBottom_toBottomOf="@+id/tvTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/ic_location"
        app:tint="@color/colorAccent"
        android:contentDescription="@string/add_location_icon" />

    <EditText
        android:id="@+id/editTextTextPersonName3"
        android:layout_width="321dp"
        android:layout_height="100dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="32dp"
        android:background="@null"
        android:ems="5"
        android:inputType="textMultiLine"
        android:hint="@string/notes"
        android:gravity="top|start"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider"
        android:autofillHints="e.g. Great location for taking summer photos" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="12dp"
        android:layout_marginBottom="32dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/editTextTextPersonName3"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider"
        app:layout_constraintVertical_bias="0.007"
        app:srcCompat="@drawable/ic_notes"
        app:tint="#9F9F9F"
        android:contentDescription="@string/add_location_notes_icon" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="0dp"
        android:layout_height="19dp"
        android:layout_marginStart="3dp"
        android:layout_marginTop="38dp"
        android:layout_marginEnd="157dp"
        android:text="@string/ciroc_photoshoot_brooklyn"
        android:textColor="#818181"
        android:textSize="15sp"
        app:layout_constraintBottom_toTopOf="@+id/tvTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="19dp"
        android:layout_height="19dp"
        android:layout_marginStart="9dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/divider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tvTitle"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.152"
        app:srcCompat="@drawable/ic_edit"
        app:tint="#888888"
        android:contentDescription="@string/edit_address_icon" />

    <View
        android:id="@+id/divider"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="16dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTitle" />

</androidx.constraintlayout.widget.ConstraintLayout>